# agent-turn-builder

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_turn_builder/: __init__.py  core.py
tests/: test_agent_turn_builder.py  test_unittest_suite.py
