[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-turn-builder"
version = "0.1.0"
description = "Fluent builder for multi-turn LLM conversation message arrays"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["agent", "llm", "conversation", "messages", "turns", "anthropic", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_turn_builder"]

# Ship the PEP 561 marker so type checkers (mypy, pyright) honour the inline
# type hints when the package is installed as a dependency.
[tool.hatch.build.targets.wheel.force-include]
"src/agent_turn_builder/py.typed" = "agent_turn_builder/py.typed"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
